---
source: parser/src/parser/parser.rs
description: "# in some cases last price or adj price is undefined\ntry:\n    last_price = int(price_section[2])\n# when instead of number value is `F`\nexcept (ValueError, IndexError):\n    last_price = None\ntry:\n    adj_close = int(price_section[3])\nexcept (ValueError, IndexError):\n    adj_close = None\ntry:\n    market_cap = adj_close * self.total_shares\nexcept ValueError:\n    market_cap = None\n\n"
input_file: parser/test_data/inputs/try.py
---
Module {
    node: Node {
        start: 0,
        end: 381,
    },
    body: [
        TryStatement(
            Try {
                node: Node {
                    start: 53,
                    end: 190,
                },
                body: [
                    AssignStatement(
                        Assign {
                            node: Node {
                                start: 62,
                                end: 96,
                            },
                            targets: [
                                Name(
                                    Name {
                                        node: Node {
                                            start: 62,
                                            end: 72,
                                        },
                                        id: "last_price",
                                    },
                                ),
                            ],
                            value: Call(
                                Call {
                                    node: Node {
                                        start: 75,
                                        end: 96,
                                    },
                                    func: Name(
                                        Name {
                                            node: Node {
                                                start: 75,
                                                end: 78,
                                            },
                                            id: "int",
                                        },
                                    ),
                                    args: [
                                        Subscript(
                                            Subscript {
                                                node: Node {
                                                    start: 79,
                                                    end: 95,
                                                },
                                                value: Name(
                                                    Name {
                                                        node: Node {
                                                            start: 79,
                                                            end: 92,
                                                        },
                                                        id: "price_section",
                                                    },
                                                ),
                                                slice: Constant(
                                                    Constant {
                                                        node: Node {
                                                            start: 93,
                                                            end: 94,
                                                        },
                                                        value: Int(
                                                            "2",
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                    keywords: [],
                                    starargs: None,
                                    kwargs: None,
                                },
                            ),
                        },
                    ),
                ],
                handlers: [
                    ExceptHandler {
                        node: Node {
                            start: 135,
                            end: 190,
                        },
                        typ: Some(
                            Tuple(
                                Tuple {
                                    node: Node {
                                        start: 142,
                                        end: 165,
                                    },
                                    elements: [
                                        Name(
                                            Name {
                                                node: Node {
                                                    start: 143,
                                                    end: 153,
                                                },
                                                id: "ValueError",
                                            },
                                        ),
                                        Name(
                                            Name {
                                                node: Node {
                                                    start: 155,
                                                    end: 165,
                                                },
                                                id: "IndexError",
                                            },
                                        ),
                                    ],
                                },
                            ),
                        ),
                        name: None,
                        body: [
                            AssignStatement(
                                Assign {
                                    node: Node {
                                        start: 172,
                                        end: 189,
                                    },
                                    targets: [
                                        Name(
                                            Name {
                                                node: Node {
                                                    start: 172,
                                                    end: 182,
                                                },
                                                id: "last_price",
                                            },
                                        ),
                                    ],
                                    value: Constant(
                                        Constant {
                                            node: Node {
                                                start: 185,
                                                end: 189,
                                            },
                                            value: None,
                                        },
                                    ),
                                },
                            ),
                        ],
                    },
                ],
                orelse: [],
                finalbody: [],
            },
        ),
        TryStatement(
            Try {
                node: Node {
                    start: 190,
                    end: 287,
                },
                body: [
                    AssignStatement(
                        Assign {
                            node: Node {
                                start: 199,
                                end: 232,
                            },
                            targets: [
                                Name(
                                    Name {
                                        node: Node {
                                            start: 199,
                                            end: 208,
                                        },
                                        id: "adj_close",
                                    },
                                ),
                            ],
                            value: Call(
                                Call {
                                    node: Node {
                                        start: 211,
                                        end: 232,
                                    },
                                    func: Name(
                                        Name {
                                            node: Node {
                                                start: 211,
                                                end: 214,
                                            },
                                            id: "int",
                                        },
                                    ),
                                    args: [
                                        Subscript(
                                            Subscript {
                                                node: Node {
                                                    start: 215,
                                                    end: 231,
                                                },
                                                value: Name(
                                                    Name {
                                                        node: Node {
                                                            start: 215,
                                                            end: 228,
                                                        },
                                                        id: "price_section",
                                                    },
                                                ),
                                                slice: Constant(
                                                    Constant {
                                                        node: Node {
                                                            start: 229,
                                                            end: 230,
                                                        },
                                                        value: Int(
                                                            "3",
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                    keywords: [],
                                    starargs: None,
                                    kwargs: None,
                                },
                            ),
                        },
                    ),
                ],
                handlers: [
                    ExceptHandler {
                        node: Node {
                            start: 233,
                            end: 287,
                        },
                        typ: Some(
                            Tuple(
                                Tuple {
                                    node: Node {
                                        start: 240,
                                        end: 263,
                                    },
                                    elements: [
                                        Name(
                                            Name {
                                                node: Node {
                                                    start: 241,
                                                    end: 251,
                                                },
                                                id: "ValueError",
                                            },
                                        ),
                                        Name(
                                            Name {
                                                node: Node {
                                                    start: 253,
                                                    end: 263,
                                                },
                                                id: "IndexError",
                                            },
                                        ),
                                    ],
                                },
                            ),
                        ),
                        name: None,
                        body: [
                            AssignStatement(
                                Assign {
                                    node: Node {
                                        start: 270,
                                        end: 286,
                                    },
                                    targets: [
                                        Name(
                                            Name {
                                                node: Node {
                                                    start: 270,
                                                    end: 279,
                                                },
                                                id: "adj_close",
                                            },
                                        ),
                                    ],
                                    value: Constant(
                                        Constant {
                                            node: Node {
                                                start: 282,
                                                end: 286,
                                            },
                                            value: None,
                                        },
                                    ),
                                },
                            ),
                        ],
                    },
                ],
                orelse: [],
                finalbody: [],
            },
        ),
        TryStatement(
            Try {
                node: Node {
                    start: 287,
                    end: 381,
                },
                body: [
                    AssignStatement(
                        Assign {
                            node: Node {
                                start: 296,
                                end: 338,
                            },
                            targets: [
                                Name(
                                    Name {
                                        node: Node {
                                            start: 296,
                                            end: 306,
                                        },
                                        id: "market_cap",
                                    },
                                ),
                            ],
                            value: BinOp(
                                BinOp {
                                    node: Node {
                                        start: 309,
                                        end: 338,
                                    },
                                    op: Mult,
                                    left: Name(
                                        Name {
                                            node: Node {
                                                start: 309,
                                                end: 318,
                                            },
                                            id: "adj_close",
                                        },
                                    ),
                                    right: Attribute(
                                        Attribute {
                                            node: Node {
                                                start: 321,
                                                end: 338,
                                            },
                                            value: Name(
                                                Name {
                                                    node: Node {
                                                        start: 321,
                                                        end: 325,
                                                    },
                                                    id: "self",
                                                },
                                            ),
                                            attr: "total_shares",
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                ],
                handlers: [
                    ExceptHandler {
                        node: Node {
                            start: 339,
                            end: 381,
                        },
                        typ: Some(
                            Name(
                                Name {
                                    node: Node {
                                        start: 346,
                                        end: 356,
                                    },
                                    id: "ValueError",
                                },
                            ),
                        ),
                        name: None,
                        body: [
                            AssignStatement(
                                Assign {
                                    node: Node {
                                        start: 362,
                                        end: 379,
                                    },
                                    targets: [
                                        Name(
                                            Name {
                                                node: Node {
                                                    start: 362,
                                                    end: 372,
                                                },
                                                id: "market_cap",
                                            },
                                        ),
                                    ],
                                    value: Constant(
                                        Constant {
                                            node: Node {
                                                start: 375,
                                                end: 379,
                                            },
                                            value: None,
                                        },
                                    ),
                                },
                            ),
                        ],
                    },
                ],
                orelse: [],
                finalbody: [],
            },
        ),
    ],
}
